--- a/EasyDoorApp/app/build.gradle
+++ b/EasyDoorApp/app/build.gradle
@@ -19,10 +19,13 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation 'com.android.support:recyclerview-v7:27.0.0'
+    implementation 'com.amazonaws:aws-java-sdk-rekognition:1.11.224'
+    implementation 'com.amazonaws:aws-android-sdk-rekognition:2.6.6'
 }
