Added new files

--- a/EasyDoorCamera/app/build.gradle
+++ b/EasyDoorCamera/app/build.gradle
@@ -37,8 +37,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.amazonaws:aws-android-sdk-rekognition:2.6.6'
-    implementation 'com.amazonaws:aws-android-sdk-core:2.6.6'
-    implementation 'com.amazonaws:aws-android-sdk-s3:2.6.6'
-    implementation 'com.amazonaws:aws-android-sdk-ddb:2.6.6'
     implementation 'com.amazonaws:aws-android-sdk-cognito:2.6.6'
+    implementation 'com.amazonaws:aws-android-sdk-sns:2.6.6'
+    implementation 'com.amazonaws:aws-android-sdk-s3:2.6.6'
 }
