--- a/EasyDoorCamera/app/build.gradle
+++ b/EasyDoorCamera/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     implementation 'com.amazonaws:aws-android-sdk-s3:2.6.6'
     implementation 'com.amazonaws:aws-android-sdk-ddb:2.6.6'
     implementation 'com.amazonaws:aws-android-sdk-cognito:2.6.6'
+    implementation 'com.amazonaws:aws-android-sdk-sns:2.6.6'
 }
