--- a/EasyDoorTracking/OpenCVwithUVC/local.properties
+++ b/EasyDoorTracking/OpenCVwithUVC/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Nov 04 18:06:18 EDT 2017
-ndk.dir=C\:\\Android\\sdk\\ndk-bundle
-sdk.dir=C\:\\Android\\sdk
+#Sun Nov 05 10:21:55 EST 2017
+sdk.dir=/home/erik/Android/Sdk
